--- a/cricket-tournament-backend/package.json
+++ b/cricket-tournament-backend/package.json
@@ -1,25 +1,23 @@
 {
   "name": "cricket-tournament-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^1.20.3",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongoose": "^8.2.0",
-    "razorpay": "^2.9.6"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3",
+    "razorpay": "^2.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
