--- a/spl-vite/netlify.toml
+++ b/spl-vite/netlify.toml
@@ -1,4 +1,4 @@
-[[headers]]
-  for = "/*.js"
-  [headers.values]
-    Content-Type = "application/javascript"
+[[redirects]]
+  from = "/*"
+  to = "/"
+  status = 200
