--- a/spl-vite/netlify.toml
+++ b/spl-vite/netlify.toml
@@ -1,4 +1,8 @@
-[[redirects]]
-  from = "/*"
-  to = "/"
-  status = 200
+[build]
+  command = "npm run build"
+  publish = "dist"
+
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+    Content-Type = "application/javascript"
